cd to outer directory in sample5

--- a/notebooks/sample5.ipynb
+++ b/notebooks/sample5.ipynb
@@ -3,6 +3,24 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "54e585c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/amyrfrancisco/Developer/projects/tm-rag-amyr\n"
+     ]
+    }
+   ],
+   "source": [
+    "%cd ../"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "116074ad",
    "metadata": {},
    "outputs": [
@@ -12,7 +30,7 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "355addbb",
    "metadata": {},
    "outputs": [],
@@ -38,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "db23693f",
    "metadata": {},
    "outputs": [
@@ -59,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "b92c7d08",
    "metadata": {},
    "outputs": [
@@ -67,7 +85,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:08<00:00,  8.13s/it]\n"
+      "100%|██████████| 1/1 [00:08<00:00,  8.65s/it]\n"
      ]
     },
     {
@@ -76,7 +94,7 @@
        "1"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "102bd31b",
    "metadata": {},
    "outputs": [
@@ -102,7 +120,7 @@
        "387"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "530b82cc",
    "metadata": {},
    "outputs": [],
@@ -135,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "76b108b0",
    "metadata": {},
    "outputs": [],
@@ -145,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "9d8839b5",
    "metadata": {},
    "outputs": [],
@@ -165,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "c95a9832",
    "metadata": {},
    "outputs": [],
@@ -186,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "ab6a2176",
    "metadata": {},
    "outputs": [],
@@ -257,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "c52ff536",
    "metadata": {},
    "outputs": [],
@@ -288,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "dafa038b",
    "metadata": {},
    "outputs": [
@@ -311,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "9a7562c0",
    "metadata": {},
    "outputs": [],
@@ -321,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "id": "7d92ae46",
    "metadata": {},
    "outputs": [
@@ -329,27 +347,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "================================\u001b[1m Human Message \u001b[0m=================================\n",
-      "\n",
-      "anw, so far what did i ask?\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "\n",
-      "You haven't asked anything yet, this is the start of our conversation. What would you like to talk about or ask?\n"
+      "I can help you with question-answering tasks using the provided context from the 2023 Annual Report PDF. I can assist with answering specific questions about the content, such as investor relations, company announcements, or financial information. If you have a question, feel free to ask, and I'll do my best to provide a concise answer.\n"
      ]
     }
    ],
    "source": [
+    "# from langchain_core.messages import HumanMessage\n",
+    "\n",
+    "# query = \"anw, so far what did i ask?\"\n",
+    "# input_message = [HumanMessage(query)]\n",
+    "\n",
+    "# for step in graph.stream(\n",
+    "#     {\"messages\": input_message},\n",
+    "#     stream_mode=\"values\",\n",
+    "#     config=config,\n",
+    "# ):\n",
+    "#     step[\"messages\"][-1].pretty_print()\n",
+    "\n",
     "from langchain_core.messages import HumanMessage\n",
     "\n",
-    "query = \"anw, so far what did i ask?\"\n",
+    "query = \"what can you help me with\"\n",
     "input_message = [HumanMessage(query)]\n",
     "\n",
-    "for step in graph.stream(\n",
-    "    {\"messages\": input_message},\n",
-    "    stream_mode=\"values\",\n",
-    "    config=config,\n",
-    "):\n",
-    "    step[\"messages\"][-1].pretty_print()"
+    "response = graph.invoke({\"messages\": input_message}, config)\n",
+    "\n",
+    "response[\"messages\"][-1].pretty_print()"
    ]
   },
   {
