fix: vector store leak and reset bug

--- a/notebooks/sample5.ipynb
+++ b/notebooks/sample5.ipynb
@@ -85,7 +85,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:08<00:00,  8.65s/it]\n"
+      "100%|██████████| 1/1 [00:07<00:00,  7.81s/it]\n"
      ]
     },
     {
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "id": "ab6a2176",
    "metadata": {},
    "outputs": [],
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "id": "c52ff536",
    "metadata": {},
    "outputs": [],
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "dafa038b",
    "metadata": {},
    "outputs": [
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "id": "9a7562c0",
    "metadata": {},
    "outputs": [],
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "id": "7d92ae46",
    "metadata": {},
    "outputs": [
@@ -347,16 +347,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
-      "\n",
-      "I can help you with question-answering tasks using the provided context from the 2023 Annual Report PDF. I can assist with answering specific questions about the content, such as investor relations, company announcements, or financial information. If you have a question, feel free to ask, and I'll do my best to provide a concise answer.\n"
+      "Microsoft is committed to addressing racial injustice and inequity, focusing on improving the lives of Black and African American communities through its Racial Equity Initiative. The company aims to create an inclusive work environment and drive systemic change. Microsoft tracks and publicly discloses its progress on workforce metrics, including diversity and pay equity.\n"
      ]
     }
    ],
    "source": [
     "# from langchain_core.messages import HumanMessage\n",
     "\n",
-    "# query = \"anw, so far what did i ask?\"\n",
+    "# query = \"microsoft's stance on racial issue\"\n",
     "# input_message = [HumanMessage(query)]\n",
     "\n",
     "# for step in graph.stream(\n",
@@ -364,16 +362,17 @@
     "#     stream_mode=\"values\",\n",
     "#     config=config,\n",
     "# ):\n",
-    "#     step[\"messages\"][-1].pretty_print()\n",
+    "#     # step[\"messages\"][-1].content\n",
+    "#     print(step[\"messages\"][-1].content)\n",
     "\n",
     "from langchain_core.messages import HumanMessage\n",
     "\n",
-    "query = \"what can you help me with\"\n",
+    "query = \"microsoft's stance on racial issue\"\n",
     "input_message = [HumanMessage(query)]\n",
     "\n",
     "response = graph.invoke({\"messages\": input_message}, config)\n",
     "\n",
-    "response[\"messages\"][-1].pretty_print()"
+    "print(response[\"messages\"][-1].content)"
    ]
   },
   {
