fix bugs and refactor

--- a/notebooks/sample5.ipynb
+++ b/notebooks/sample5.ipynb
@@ -44,14 +44,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 74,
    "id": "355addbb",
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain.chat_models import init_chat_model\n",
     "\n",
-    "llm = init_chat_model(\"llama-3.3-70b-versatile\", model_provider=\"groq\")"
+    "llm = init_chat_model(\"meta-llama/llama-4-scout-17b-16e-instruct\", model_provider=\"groq\")"
    ]
   },
   {
@@ -85,7 +85,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:08<00:00,  8.65s/it]\n"
+      "100%|██████████| 1/1 [00:08<00:00,  8.64s/it]\n"
      ]
     },
     {
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 120,
    "id": "ab6a2176",
    "metadata": {},
    "outputs": [],
@@ -218,8 +218,8 @@
     "def retrieve(query: str):\n",
     "    \"\"\"Retrieve information related to a query.\"\"\"\n",
     "    retrieved_docs = vector_store.similarity_search(query, k=4)\n",
-    "    serialized = \"\\n\\n\".join(\n",
-    "        (f\"Source: {doc.metadata}\\n\" f\"Content: {doc.page_content}\")\n",
+    "    serialized = \"\\n\\n----------\\n\\n\".join(\n",
+    "        (f\"Source: {doc.metadata[\"source\"]}\\nContent: {doc.page_content}\")\n",
     "        for doc in retrieved_docs\n",
     "    )\n",
     "    return serialized, retrieved_docs\n",
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 121,
    "id": "c52ff536",
    "metadata": {},
    "outputs": [],
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 122,
    "id": "dafa038b",
    "metadata": {},
    "outputs": [
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 123,
    "id": "9a7562c0",
    "metadata": {},
    "outputs": [],
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 124,
    "id": "7d92ae46",
    "metadata": {},
    "outputs": [
@@ -349,7 +349,7 @@
      "text": [
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "\n",
-      "I can help you with question-answering tasks using the provided context from the 2023 Annual Report PDF. I can assist with answering specific questions about the content, such as investor relations, company announcements, or financial information. If you have a question, feel free to ask, and I'll do my best to provide a concise answer.\n"
+      "Our revenue for 2023 was $211,915 million. This represents a 7% increase from 2022, driven by growth in Intelligent Cloud and Productivity and Business Processes, offset by a decline in More Personal Computing. The revenue breakdown by segment was: Productivity and Business Processes ($69,274 million), Intelligent Cloud ($87,907 million), and More Personal Computing ($54,734 million).\n"
      ]
     }
    ],
@@ -368,7 +368,7 @@
     "\n",
     "from langchain_core.messages import HumanMessage\n",
     "\n",
-    "query = \"what can you help me with\"\n",
+    "query = \"tell me about our revenue on 2023\"\n",
     "input_message = [HumanMessage(query)]\n",
     "\n",
     "response = graph.invoke({\"messages\": input_message}, config)\n",
@@ -378,8 +378,231 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "id": "c08d81bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Source: docs/2023_Annual_Report.pdf\n",
+      "Content: Segment revenue and operating income were as follows during the periods presented:\n",
+      "\n",
+      "(In millions)\n",
+      "\n",
+      "Year Ended June 30,\n",
+      "\n",
+      "2023\n",
+      "\n",
+      "2022\n",
+      "\n",
+      "Revenue\n",
+      "\n",
+      "Productivity and Business Processes Intelligent Cloud More Personal Computing\n",
+      "\n",
+      "$\n",
+      "\n",
+      "69,274 $ 87,907 54,734\n",
+      "\n",
+      "63,364 $ 74,965 59,941\n",
+      "\n",
+      "Total\n",
+      "\n",
+      "$\n",
+      "\n",
+      "211,915 $\n",
+      "\n",
+      "198,270 $\n",
+      "\n",
+      "Operating Income Productivity and Business Processes Intelligent Cloud More Personal Computing\n",
+      "\n",
+      "$\n",
+      "\n",
+      "34,189 $ 37,884 16,450\n",
+      "\n",
+      "29,690 $ 33,203 20,490\n",
+      "\n",
+      "Total\n",
+      "\n",
+      "$\n",
+      "\n",
+      "88,523 $\n",
+      "\n",
+      "83,383 $\n",
+      "\n",
+      "No sales to an individual customer or country other than the United States accounted for more than 10% of revenue for fiscal years 2023, 2022, or 2021. Revenue, classified by the major geographic areas in which our customers were located, was as follows:\n",
+      "\n",
+      "(In millions)\n",
+      "\n",
+      "Year Ended June 30,\n",
+      "\n",
+      "2023\n",
+      "\n",
+      "2022\n",
+      "\n",
+      "United States (a) Other countries\n",
+      "\n",
+      "$\n",
+      "\n",
+      "106,744 $ 105,171\n",
+      "\n",
+      "100,218 $ 98,052\n",
+      "\n",
+      "Total\n",
+      "\n",
+      "$\n",
+      "\n",
+      "211,915 $\n",
+      "\n",
+      "198,270 $\n",
+      "\n",
+      "(a)\n",
+      "\n",
+      "----------\n",
+      "\n",
+      "Source: docs/2023_Annual_Report.pdf\n",
+      "Content: Fiscal Year 2023 Compared with Fiscal Year 2022\n",
+      "\n",
+      "Revenue increased $13.6 billion or 7% driven by growth in Intelligent Cloud and Productivity and Business Processes, offset in part by a decline in More Personal Computing. Intelligent Cloud revenue increased driven by Azure and other cloud services. Productivity and Business Processes revenue increased driven by Office 365 Commercial and LinkedIn. More Personal Computing revenue decreased driven by Windows and Devices.\n",
+      "\n",
+      "29\n",
+      "\n",
+      "Cost of revenue increased $3.2 billion or 5% driven by growth in Microsoft Cloud, offset in part by the change in accounting estimate.\n",
+      "\n",
+      "Gross margin increased $10.4 billion or 8% driven by growth in Intelligent Cloud and Productivity and Business Processes and the change in accounting estimate, offset in part by a decline in More Personal Computing.\n",
+      "\n",
+      "----------\n",
+      "\n",
+      "Source: docs/2023_Annual_Report.pdf\n",
+      "Content: NOTE 13 — UNEARNED REVENUE\n",
+      "\n",
+      "Unearned revenue by segment was as follows:\n",
+      "\n",
+      "(In millions)\n",
+      "\n",
+      "June 30,\n",
+      "\n",
+      "2023\n",
+      "\n",
+      "Productivity and Business Processes Intelligent Cloud More Personal Computing\n",
+      "\n",
+      "$\n",
+      "\n",
+      "27,572 $ 21,563 4,678\n",
+      "\n",
+      "Total\n",
+      "\n",
+      "$\n",
+      "\n",
+      "53,813 $\n",
+      "\n",
+      "Changes in unearned revenue were as follows:\n",
+      "\n",
+      "(In millions)\n",
+      "\n",
+      "Year Ended June 30, 2023\n",
+      "\n",
+      "Balance, beginning of period\n",
+      "\n",
+      "$\n",
+      "\n",
+      "Deferral of revenue Recognition of unearned revenue\n",
+      "\n",
+      "Balance, end of period\n",
+      "\n",
+      "$\n",
+      "\n",
+      "Revenue allocated to remaining performance obligations, which includes unearned revenue and amounts that will be invoiced and recognized as revenue in future periods, was $229 billion as of June 30, 2023, of which $224 billion is related to the commercial portion of revenue. We expect to recognize approximately 45% of this revenue over the next 12 months and the remainder thereafter.\n",
+      "\n",
+      "66\n",
+      "\n",
+      "2021\n",
+      "\n",
+      "13,792 (195) 790 461 (297) (1)\n",
+      "\n",
+      "14,550\n",
+      "\n",
+      "2022\n",
+      "\n",
+      "24,558 19,371 4,479\n",
+      "\n",
+      "48,408\n",
+      "\n",
+      "48,408 123,935 (118,530)\n",
+      "\n",
+      "53,813\n",
+      "\n",
+      "NOTE 14 — LEASES\n",
+      "\n",
+      "----------\n",
+      "\n",
+      "Source: docs/2023_Annual_Report.pdf\n",
+      "Content: SEGMENT RESULTS OF OPERATIONS\n",
+      "\n",
+      "(In millions, except percentages)\n",
+      "\n",
+      "2023\n",
+      "\n",
+      "2022\n",
+      "\n",
+      "Revenue Productivity and Business Processes Intelligent Cloud More Personal Computing\n",
+      "\n",
+      "$\n",
+      "\n",
+      "69,274 $ 87,907 54,734\n",
+      "\n",
+      "63,364 74,965 59,941\n",
+      "\n",
+      "Total\n",
+      "\n",
+      "$\n",
+      "\n",
+      "211,915 $\n",
+      "\n",
+      "198,270\n",
+      "\n",
+      "Operating Income Productivity and Business Processes Intelligent Cloud More Personal Computing\n",
+      "\n",
+      "$\n",
+      "\n",
+      "34,189 $ 37,884 16,450\n",
+      "\n",
+      "29,690 33,203 20,490\n",
+      "\n",
+      "Total\n",
+      "\n",
+      "$\n",
+      "\n",
+      "88,523 $\n",
+      "\n",
+      "83,383\n",
+      "\n",
+      "Reportable Segments\n",
+      "\n",
+      "Fiscal Year 2023 Compared with Fiscal Year 2022\n",
+      "\n",
+      "Productivity and Business Processes\n",
+      "\n",
+      "Revenue increased $5.9 billion or 9%.\n",
+      "\n",
+      "Office Commercial products and cloud services revenue increased $3.7 billion or 10%. Office 365 Commercial revenue grew 13% with seat growth of 11%, driven by small and medium business and frontline worker offerings, as well as growth in revenue per user. Office Commercial products revenue declined 21% driven by continued customer shift to cloud offerings.\n"
+     ]
+    }
+   ],
+   "source": [
+    "latest_tool_message = next(\n",
+    "    (m for m in reversed(response[\"messages\"]) if m.type == \"tool\"), None\n",
+    ")\n",
+    "\n",
+    "if latest_tool_message:\n",
+    "    print(latest_tool_message.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06450cf2",
    "metadata": {},
    "outputs": [],
    "source": []
